# dotfiles

./: .gitignore  .venv  CLEANUP_SUMMARY.md  Dockerfile  GEMINI.md  Makefile  PLUGIN_CLEANUP_SUMMARY.md  README.md  agents.md  install-nvim.sh  install.sh  install_miniconda.sh  install_no_root  report.md  setup.sh  setup_bash.sh  setup_fish.sh  setup_mac.sh  setup_noninteractive.sh  setup_ubuntu.sh
.github/: copilot-instructions.md
asssets/: agents.md  mtg-template.yml
autossh/: install_autossh_ubuntu.sh
bash/: README.md  agents.md  aliases.sh  bashrc.sh  bashrc_manager.sh  functions.sh  functions.sh.backup  keybindings.sh  test.sh
copilot/: code-gen.md
copilot-prompts/: how-to-generate-llms.prompt  how-togenerate-llms.md
custom-tools/: README.md  agents.md  autoreload-toggle  cat_projects.py  extract_functions.py  hf-down.py  install-pytools.fish  ipython-autoreload-off.py  ipython-autoreload-on.py  keep_ssh.py  mtg  print-ipv4.py  pyinit.py  pylint-project.py  pytools-cat_projects.py  run-list-cmd.py  settings.ini  setup.py  vpnauth.py
custom-tools/improve-code/: README.md  pyproject.toml
custom-tools/improve-code/src/improve_code/: __init__.py  __main__.py  cli.py  improve_code.default.yaml
custom-tools/pytools/: IMPLEMENTATION.md  Makefile  README.md  UX_IMPROVEMENT_PLAN.md  agents.md  pyproject.toml
custom-tools/pytools/docs/: CLI.md  mcp_server.md  quickstart.md
custom-tools/pytools/plans/: 00_mordernize.md
custom-tools/pytools/scripts/: generate_docs.py  mcp_client_example.py
custom-tools/pytools/src/: agents.md
custom-tools/pytools/src/pytools/: __init__.py  __main__.py  cat_projects.py  cli.py  cli_utils.py  env_commands.py  hf_down.py  kill_process_grep.py  lsh.py  organize_downloads.py  print_ipv4.py  report_error.py  set_env.py  setup_typing.py
custom-tools/pytools/src/pytools/core/: __init__.py  executor.py  registry.py  session.py
custom-tools/pytools/src/pytools/mcp/: __init__.py  server.py
custom-tools/pytools/src/pytools/vscode_settings/: default_python.json
custom-tools/pytools/tests/: test_cli.py  test_executor.py  test_mcp_server.py  test_registry.py  test_session.py
default_configs/: ipython_config.py
docs/: README.md  agents.md  alias.md  baseline.md  refactor-roadmap.md  rollback.md
fish/: aliases.fish  config.fish  keybindings.fish
fish/functions/: absp.fish  (+18 more)
python-scripts/: download_google_folder.py
python_bin/: cat_jsonl  cat_python_project  code-debug  organize_download
scripts/: agents.md
tmux/: agents.md  tmux.conf
tools/: agents.md  history_grep.py  ipython_config.py  run_list_commands.py  start-server.sh
utils/: agents.md  copy  keep28  keep_connection.sh  pyson  test.py
vim/: agents.md  install-copilot-simple.sh  install-nvim.sh  install.sh  nvimrc.vim  python-snipet.vim  setup-copilot.sh  test.py  vimrc.vim
zsh/: PERFORMANCE_REPORT.md  VENV_README.md  agents.md  alias.sh  benchmark.sh  functions.sh  keybindings.sh  mygroup.sh  prompt.sh  run.sh  test.ipynb  update_keybinding.py  venv.bk.sh  venv.sh  zshrc.sh  zshrc_manager.sh
(+25 files in other folders)
