[project]
name = "pytools"
version = "0.2.0"
description = "A collection of Python utility scripts for dotfiles management"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["loguru", "rich>=13.7.0", "prompt_toolkit>=3.0.36"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[project.scripts]
pytools = "pytools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
