[project]
name = "pytools"
version = "0.3.0"
description = "A collection of Python utility scripts for dotfiles management"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "loguru",
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.36",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[project.scripts]
pytools = "pytools.cli:main"
pytools-mcp = "pytools.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
namespace_packages = true
explicit_package_bases = true
exclude = ["venv", "tests", "htmlcov"]
